--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+greeting.name=Dakota
+greeting.coffee=${greeting.name} is Drinking Cafe Cereza
 
+droid.id=BB-8
+droid.description=Small, rolling android. Probably doesn't drink coffee.
+
+debug=true
