--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,14 @@ greeting.coffee=${greeting.name} is Drinking Cafe Cereza
 droid.id=BB-8
 droid.description=Small, rolling android. Probably doesn't drink coffee.
 
-debug=true
+#? ???? ??????? ? ?????? ?????????? ? ?????? Actuator ??????? ??? ???????
+#?????? ???????? ????? /actuator/env, /actuator/info ? /actuator/health,
+#? ????? ??? ?? ???????? ???????? ?????.
+#management.endpoints.web.exposure.include=env, info, health
+management.endpoints.web.exposure.include=*
+
+#?????????? ??? ????????? ???????? ????????-?????????? ????????? ?????????? show-details: never (?? ?????????)
+# when_authorized ? always. ??? ????? ??????? ? ?????? ???????? always, ?????? ????? ??????????????????
+# ??? ???????????, ?? ??? ????? ?????????? ? ?????????? ??????? ???????? ???????? never ???
+# when_authorized, ????? ?????????? ????????? ??????????? ?????????? ? ????????????????? ??????????.
+management.endpoint.health.show-details=always
